# ai-character-aipart

./: .env.example  .gitignore  README.md  pyproject.toml
app/ai_services/: README.md
app/ai_services/chains/: __init__.py  character_response_chain.py
app/ai_services/config/: ai_settings.py  default_limits.py  emotion_taxonomy.py
app/ai_services/contracts/: __init__.py  ai_request.py  ai_response.py  contexts.py  errors.py  payloads.py
app/ai_services/memory/: __init__.py  fact_extractor.py  memory_pinner.py  memory_selector.py  memory_service.py  memory_summarizer.py
app/ai_services/observability/: langsmith.py  trace_context.py
app/ai_services/parser/: __init__.py  action_parser.py  emotion_extractor.py  fallback_handler.py  response_parser.py
app/ai_services/ports/: __init__.py  audio_store.py  character_store.py  continuity_store.py  memory_store.py  user_persona_store.py  voice_store.py
app/ai_services/prompts/: __init__.py  builder.py  loader.py  registry.py
app/ai_services/prompts/injectors/: __init__.py  character_injector.py  continuity_injector.py  language_injector.py  memory_injector.py  (+1 more)
docs/: AI_CONTRACT.md  AI_SERVICE_README.md
scripts/: run_ai_demo_mock.py
tests/ai/fixtures/: fake_character_data.py  fake_continuity_data.py  fake_memory_data.py  fake_stores.py  fake_user_persona_data.py  fake_voice_data.py
tests/ai/integration/: test_character_response_chain_mock.py
tests/ai/unit/: test_ai_contracts.py  test_fake_stores.py  test_memory_service.py  test_mock_llm.py  test_prompt_builder.py  test_response_parser.py
(+7 files in other folders)
